# Notebook-lite

./: README.md  build.py  index.html  pyproject.toml
.github/workflows/: build.yml
LLM_SKILLS/pNote/: README.md  SKILL.md  __init__.py  cli.py  pyproject.toml  skill-manifest.yaml  skill.py  test_skill.py
